--- a/s18/index.html
+++ b/s18/index.html
@@ -5,49 +5,35 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>Forty by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+<html><head>
+		<title>무쌍 S18 정보 모음 by 黑리온</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<link rel="stylesheet" href="assets/css/main.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body class="">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
+					<header id="header" class="reveal alt">
+						<a href="index.html" class="logo"><strong>무쌍 S18 정보 모음</strong> <span>by. 黑리온</span></a>
+						
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
+					
 
 				<!-- Banner -->
-					<section id="banner" class="major">
+					<section id="banner" class="major" style="background-position: center 0px;">
 						<div class="inner">
 							<header class="major">
 								<h1>Hi, my name is Forty</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
+								<p>A responsive site template designed by HTML5 UP<br>
 								and released under the Creative Commons.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
@@ -61,60 +47,60 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+								<article style="background-image: url(&quot;images/pic01.jpg&quot;);">
+									<span class="image" style="display: none;">
+										<img src="images/pic01.jpg" alt="">
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Aliquam</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+								<a href="landing.html" class="link primary"></a></article>
+								<article style="background-image: url(&quot;images/pic02.jpg&quot;);">
+									<span class="image" style="display: none;">
+										<img src="images/pic02.jpg" alt="">
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Tempus</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+								<a href="landing.html" class="link primary"></a></article>
+								<article style="background-image: url(&quot;images/pic03.jpg&quot;);">
+									<span class="image" style="display: none;">
+										<img src="images/pic03.jpg" alt="">
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Magna</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+								<a href="landing.html" class="link primary"></a></article>
+								<article style="background-image: url(&quot;images/pic04.jpg&quot;);">
+									<span class="image" style="display: none;">
+										<img src="images/pic04.jpg" alt="">
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Ipsum</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+								<a href="landing.html" class="link primary"></a></article>
+								<article style="background-image: url(&quot;images/pic05.jpg&quot;);">
+									<span class="image" style="display: none;">
+										<img src="images/pic05.jpg" alt="">
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Consequat</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+								<a href="landing.html" class="link primary"></a></article>
+								<article style="background-image: url(&quot;images/pic06.jpg&quot;);">
+									<span class="image" style="display: none;">
+										<img src="images/pic06.jpg" alt="">
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>
+								<a href="landing.html" class="link primary"></a></article>
 							</section>
 
 						<!-- Two -->
@@ -140,11 +126,11 @@
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input type="text" name="name" id="name">
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="text" name="email" id="email">
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
@@ -152,8 +138,8 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
+										<li><input type="submit" value="Send Message" class="primary"></li>
+										<li><input type="reset" value="Clear"></li>
 									</ul>
 								</form>
 							</section>
@@ -176,8 +162,8 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										<span>1234 Somewhere Road #5432<br>
+										Nashville, TN 00000<br>
 										United States of America</span>
 									</div>
 								</section>
@@ -196,7 +182,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>© Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
@@ -210,7 +196,18 @@
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script><nav id="menu"><div class="inner">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="landing.html">Landing</a></li>
+							<li><a href="generic.html">Generic</a></li>
+							<li><a href="elements.html">Elements</a></li>
+						</ul>
+						<ul class="actions stacked">
+							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="#" class="button fit">Log In</a></li>
+						</ul>
+					</div><a class="close" href="#menu">Close</a></nav>
 
-	</body>
-</html>
+	
+</body></html>
