--- a/s18/index.html
+++ b/s18/index.html
@@ -102,7 +102,7 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://rung-e.github.io/samjeon-lucky7/s18/markdown/law1.md" class="link">토지 법령</a></h3>
+										<h3><a href="https://rung-e.github.io/samjeon-lucky7/s18/markdown/law1" class="link">토지 법령</a></h3>
 										<p>S18 무쌍(운칠기삼+북두) 토지법령</p>
 									</header>
 								</article>
@@ -111,7 +111,7 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://rung-e.github.io/samjeon-lucky7/s18/markdown/law2.md" class="link">활동 법령</a></h3>
+										<h3><a href="https://rung-e.github.io/samjeon-lucky7/s18/markdown/law2" class="link">활동 법령</a></h3>
 										<p>S18 무쌍(운칠기삼+북두) 활동법령</p>
 									</header>
 								</article>
