--- a/s18/index.html
+++ b/s18/index.html
@@ -116,6 +116,15 @@
 									</header>
 								</article>
 							</section>
+						<article>
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://rung-e.github.io/samjeon-lucky7/s18/images/pic01.jpg" class="link">병기 가이드</a></h3>
+										<p>무명/낮밤 병기 장수 및 전법 추천</p>
+									</header>
+								</article>
 
 						
 				<!-- Footer -->
